--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -10,16 +10,23 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://xmlns.jcp.org/jsf/core">
 
 <h:head>
     <title>Feaces Hello</title>
 </h:head>
 
 <h:body>
-    <h:outputLabel value="Hello from JSF" />
-    <h:outputLabel value="#{hello.sayHello('Jay')}" />
-    <h:outputLabel value="Hello from JSF" />
+    <h:form>
+        <h:outputLabel value="Name" for="name" />
+        <h:inputText id="name" value="#{hello.name}" />
+        <h:commandButton value="Greet" >
+            <f:ajax execute="name" render="greeting" />
+        </h:commandButton>
+        <h:outputLabel id="greeting" value="#{hello.greet}" />
+    </h:form>
+
+
 </h:body>
 
 </html>
